@@ -2,10 +2,12 @@ package Gym.Entities;
 
 import java.time.LocalDateTime;
 
+import Gym.Enum.MemberStatus;
 import Gym.Enum.PaymentMethod;
+import Gym.Interface.Displayable;
 
-public class Payment {
-    private  static int count=0;
+public class Payment implements Displayable {
+    private static int count = 0;
     private double payAmount; // base amount
     private String paymentID; //
     private float discount; // if there's a discount
@@ -13,7 +15,7 @@ public class Payment {
     private LocalDateTime paymentDate;
     private PaymentMethod method; // in what method ? KHQR ? credit card?
     private double finalAmount;
-    private  Membership membership;
+    private Membership membership;
 
     
 
@@ -29,27 +31,40 @@ public class Payment {
        
 
     }
+
     // accessor
-    public void setDiscount(float discount){
-        if(discount>0)
-            this.discount=discount;
-        else{
-            this.discount=0;
+    public void setDiscount(float discount) {
+        if (discount > 0)
+            this.discount = discount;
+        else {
+            this.discount = 0;
         }
     }
-    public float getDiscount(){
+
+    public float getDiscount() {
         return discount;
     }
 
-    public LocalDateTime getPaymentDate(){
+    public LocalDateTime getPaymentDate() {
         return this.paymentDate;
     }
-    public String getPaymentID()    { return paymentID; }
-    public PaymentMethod getMethod(){ return method; }
-    public double getPayAmount()    { return payAmount; }
-    public Membership getMembership(){
+
+    public String getPaymentID() {
+        return paymentID;
+    }
+
+    public PaymentMethod getMethod() {
+        return method;
+    }
+
+    public double getPayAmount() {
+        return payAmount;
+    }
+
+    public Membership getMembership() {
         return membership;
     }
+
     public double calculateFinalAmount() {
         return switch (method) {
             case KHQR -> payAmount * (1 - discount);
@@ -57,16 +72,43 @@ public class Payment {
             case CREDITCARD -> payAmount * (1 - discount) * 1.05;
         };
     }
+
     @Override
-public String toString() {
-    return """
-            Payment ID      : %s
-            Subscription ID : %s
-            Member ID       : %s 
-            Member Name     : %s
-            Discount        :%.0f%%
-            Method          :%s
-            Final Amount    :$%.2f
-            """.formatted(paymentID, subcriptionID,membership.getMember().getID(),membership.getMember().getName(), discount * 100, method.name(), finalAmount);
-}
+    public void displayable() {
+
+        System.out.println(String.format("""
+                ----------------------------------
+                      PAYMENT INFORMATION
+                ----------------------------------
+                Payment ID      : %s
+                Subscription ID : %s
+                Member ID       : %s
+                Member Name     : %s
+                Discount        : %.0f%%
+                Method          : %s
+                Final Amount    : $%.2f
+                ----------------------------------
+                """,
+                paymentID,
+                subcriptionID,
+                membership.getMember().getID(),
+                membership.getMember().getName(),
+                discount * 100,
+                method.name(),
+                finalAmount));
+    }
+
+    @Override
+    public String toString() {
+        return """
+                Payment ID      : %s
+                Subscription ID : %s
+                Member ID       : %s
+                Member Name     : %s
+                Discount        :%.0f%%
+                Method          :%s
+                Final Amount    :$%.2f
+                """.formatted(paymentID, subcriptionID, membership.getMember().getID(),
+                membership.getMember().getName(), discount * 100, method.name(), finalAmount);
+    }
 }
